fix(docs): remove line behind concave

--- a/docs/app/home/home.component.scss
+++ b/docs/app/home/home.component.scss
@@ -33,7 +33,7 @@
   }
 
   .concave {
-    margin-bottom: -5px;
+    margin-bottom: -10px;
     margin-top: -5rem;
     margin-left: -20%;
     margin-right: -20%;
@@ -81,7 +81,7 @@
 
   .eva-concave {
     position: absolute;
-    top: -4px;
+    top: -10px;
     left: 0;
     right: 0;
     width: 100%;
